label-policy.yaml
apiVersion: kyverno.io/v1 
kind: ClusterPolicy 
metadata: 
  name: require-deployment-team-label 

spec:
  validationFailureAction: Enforce 
  rules:
    - name: requrie-deployment-team-lable 
    match: 
      any: 
        - resources:
            kinds:
              - Deployment 
    validate: 
      message: "you must have lable 'team' for all deployments"
      pattern: 
        metadata: 
          labels:
            team: "?*" #anything,any name
