non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: non-root
spec:
  rules:
    - name: enforce-non-root
      match:
        resources:
          kinds:
            - Pod
      mutate:
        patchStrategicMerge:
          spec:
            securityContext:
              runAsNonRoot: true
            containers:
              - (name): "*"
                securityContext:
                  runAsNonRoot: true
                  runAsUser: 1000
